--- a/frontend/app/components/modules/PaymentForm/PaymentForm.module.scss
+++ b/frontend/app/components/modules/PaymentForm/PaymentForm.module.scss
@@ -11,9 +11,18 @@
     .radios {
       display: flex;
       flex-direction: row;
-      column-gap: 1rem;
       justify-content: center;
-      margin: 8px 0;
+      margin-top: 0.5rem;
+      * + * {
+        margin-left: 2rem;
+      }
+      input[type="radio"] {
+        width: 1.5rem;
+        height: 1.5rem;
+        margin: 0;
+        margin-right: 0.5rem;
+        vertical-align: middle;
+      }
     }
   }
 
